src/objects/Provider_Facility_Associations__c.object
<CustomObject>
    <description>Use to track relationships between contractors and facilities.</description>
    <fields>
        <fullName>Active_AMO_RMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active AMO/RMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_First_Scheduled_Date__c</fullName>
        <label>Actual First Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Payment_Terms__c</fullName>
        <label>Additional Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AgreementRequestedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not needed on the page. Captured in activities per Beth &amp; Lyn</description>
        <label>Agreement Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001HSh1EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>removed from page per Beth and Lyn, tracked in activities.</description>
        <label>Agreement Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000012UAJEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Approved_Date__c</fullName>
        <description>Removed field from page per lyn and Beth. This is in the activity history.</description>
        <label>Agreement Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Comments__c</fullName>
        <description>Facility Docs Spare 1</description>
        <label>Agreement Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Copy_Mailed_Date__c</fullName>
        <label>Agreement Copy Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Date_Printed__c</fullName>
        <description>Not needed on page. Legacy data onnly</description>
        <label>Agreement Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Effective_Date__c</fullName>
        <description>The date the the agreement goes into effect.  Set by Compliance provided by recruiter and comes from the request for agreement form.</description>
        <label>Agreement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_FiledDate__c</fullName>
        <label>Agreement Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Mailed_CT__c</fullName>
        <formula>Agreement_Mailed_Out_Date__c  -  Agreement_Requested_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Mailed CT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Mailed_Out_Date__c</fullName>
        <label>Agreement Mailed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Not_Required__c</fullName>
        <description>This field is used in the even that a contract is not needed for any reason. The provider agreement team can select this option. This field is ued by the MEC process.</description>
        <label>Agreement Not Required</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Requested_Date__c</fullName>
        <label>Agreement Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Returned_CT__c</fullName>
        <formula>Agreement_Returned_Date__c  -  Agreement_Mailed_Out_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Returned CT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Returned_Date__c</fullName>
        <inlineHelpText>MSA and Contracting Specialists will not enter a date in this field until all items of the “provider agreement packet” have been returned and are “eligible to be executed”.</inlineHelpText>
        <label>Agreement Packet Properly Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Signed_Date__c</fullName>
        <label>Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA - Locums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Version__c</fullName>
        <description>Agreement version completed by the Provider Agreements team</description>
        <label>Agreement Version</label>
        <picklist>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Interest_In_Referring_Date__c</fullName>
        <label>Annual Interest In Referring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Received_From_CVO__c</fullName>
        <label>App Received From CVO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_to_Hosp_on__c</fullName>
        <description>Entered by CPEC</description>
        <label>App to Hosp on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_to_Provider_Deferral_End_Date__c</fullName>
        <label>App to Provider Deferral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_to_Provider_Deferral_Reason__c</fullName>
        <label>App to Provider Deferral Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Must request app from hosp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital has a pre-app process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App_to_Provider_Deferral_Start_Date__c</fullName>
        <label>App to Provider Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_First_Scheduled_Date__c</fullName>
        <description>This field is populated by a workflow that assigns the date the field &quot;First Scheduled Date&quot; is filled in.</description>
        <label>Assigned First Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Hospital_Privilege_Date__c</fullName>
        <label>Assigned Hospital Privilege Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asst_Hospital_Med_Program_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asst Hospital Med Program Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Hospital_Deferral_End_Date__c</fullName>
        <label>At Hospital Deferral End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>At_Hospital_Deferral_Reason__c</fullName>
        <label>At Hospital Deferral Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Pending/Expired/expiring licenses or certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Medicare/Medicaid PIN#s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending State Board CPA Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Hospital_Deferral_Start_Date__c</fullName>
        <label>At Hospital Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <description>Date available to start working at the facility.  Requested by Beth Smith</description>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSA_to_Billing_Company_Date__c</fullName>
        <label>BSA to Billing Company Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Comment__c</fullName>
        <label>Billing Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <label>Billing Company</label>
        <picklist>
            <picklistValues>
                <fullName>DST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOYA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRehab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Number__c</fullName>
        <label>Billing Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Annual_Call_Calculation__c</fullName>
        <formula>First_Scheduled_Date__c +365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Annual Call Calculation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Annual_Interest_In_Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Annual Interest In Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_NH_Interest_In_Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC NH Interest In Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Representative_Assigned_Annual_Call__c</fullName>
        <label>CC Representative Assigned Annual Call</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Representative_Assigned_NH_Call__c</fullName>
        <label>CC Representative Assigned to NH Call</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CME_Bonus_Payout__c</fullName>
        <label>CME Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CME_Bonus_Repayment__c</fullName>
        <label>CME Bonus Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CME_Bonus__c</fullName>
        <label>CME Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CME_Reimbursement_Amount__c</fullName>
        <label>CME Reimbursement Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMO_Approval_To_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMO Approval To Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVO_WorkOrder_Request_Sent__c</fullName>
        <label>CVO Work Order Request Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_PFA_Inactivation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel PFA Inactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate_Comments__c</fullName>
        <description>Used on Candidate Tracking Report</description>
        <label>Candidate Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Self_Insurance_Received__c</fullName>
        <label>Certificate of Self_Insurance Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Hold_Reason__c</fullName>
        <label>Check Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>BCBS only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCBS re-enrollment app</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Malpractice Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champus only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credentials only as noted in Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entire enrollment packet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS – Billing Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicaid re-enrollment app</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical license – wallet card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare/Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare/Medicaid/Champus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare /Medicaid/Champus/BCBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare re-enrollment app</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding TSG Director Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding TSG Provider Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature on PA/NP Licensing Board Form</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Compensation_Comments__c</fullName>
        <label>Compensation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_of_Incentive_Bonus__c</fullName>
        <label>Conditions of Incentive Bonus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Date__c</fullName>
        <description>Date provider contract terminates (TSG data?)</description>
        <label>Contract Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Date__c</fullName>
        <label>Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conversion_Type__c</fullName>
        <inlineHelpText>A Leadership position can be an Assistant Medical Director, Medical Director, AMO, or RMO.</inlineHelpText>
        <label>Conversion Type</label>
        <picklist>
            <picklistValues>
                <fullName>PT to FT Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT to Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FT to Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML to PT or FT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Pfa_History_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Pfa History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credentialing_Comments__c</fullName>
        <description>Displays on Facility Report -All Active</description>
        <label>Credentialing Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credentialing_Status__c</fullName>
        <label>Credentialing Status</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporarily Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Yearly_Outreach_Call_Complete__c</fullName>
        <label>Date Yearly Outreach Call Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_Recurring_Annual_POR_Workflow__c</fullName>
        <formula>IF(ISNULL(First_Scheduled_Date__c),
  Null,
  If(ISNULL(Date_Yearly_Outreach_Call_Complete__c),
       If(today()-First_Scheduled_Date__c &gt;365,
            If(AND(Month(First_Scheduled_Date__c)=2,Day(First_Scheduled_Date__c)=29),
                 Date(Year(Today()),Month(First_Scheduled_Date__c),Day(First_Scheduled_Date__c)-1),
                 Date(Year(Today()),Month(First_Scheduled_Date__c),Day(First_Scheduled_Date__c))
            ),
            First_Scheduled_Date__c + 365
       ),
       Date_Yearly_Outreach_Call_Complete__c +365
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date for Recurring Annual POR Workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_CC_Annual_Outreach_Call__c</fullName>
        <label>Date of CC Annual Outreach Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_CC_New_Hire_Call__c</fullName>
        <label>Date of CC New Hire Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnteredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provider Review Entered By</description>
        <label>Entered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001Hsq4EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Priviledged_Date__c</fullName>
        <description>Approx Date</description>
        <label>Estimated Priviledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSD_Fired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD Fired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSD_Interest_In_Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD Interest In Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSD_Outreach_Call_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD Outreach Call Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSD_Outreach_Call_Status__c</fullName>
        <formula>IF( 

AND( First_Scheduled_Date__c + 5&lt; TODAY() , FSD_Outreach_Call_Complete__c = false, Number_of_FSD_Call_Attempts__c =0 ), &quot;Over Due&quot;, 

IF(AND( First_Scheduled_Date__c + 5&lt; TODAY() , FSD_Outreach_Call_Complete__c = false, Number_of_FSD_Call_Attempts__c =1 ), &quot;1 Call Attempted - No Connect&quot;, 

IF(AND( First_Scheduled_Date__c + 5 &lt; TODAY() , FSD_Outreach_Call_Complete__c  = false, Number_of_FSD_Call_Attempts__c =2 ), &quot;2 Calls Attempted - No Connect&quot;, 

IF(AND( First_Scheduled_Date__c + 5 &lt; TODAY() ,FSD_Outreach_Call_Complete__c = false,  Number_of_FSD_Call_Attempts__c  &gt;= 3 ), &quot;3 Calls Attempted - No Connect&quot;, 

IF(AND( First_Scheduled_Date__c + 5 &lt; TODAY() , FSD_Outreach_Call_Complete__c = true ), &quot;Call Completed&quot;, 


&quot;Not Overdue&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSD Outreach Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilityCoverageType__c</fullName>
        <description>This tracks the type of Program (ED or Hospitalist). This drives the Provider Agreement Type</description>
        <label>Facility Coverage Type</label>
        <picklist>
            <picklistValues>
                <fullName>EM - Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Urgent Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Rapid Medical Exam (RME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Intermediate Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM - Acute Care Double Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM - Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM - Peds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Facility_Orientation_Completed_Date__c</fullName>
        <label>Facility Orientation Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Orientation_Manual_Sent_Date__c</fullName>
        <label>Facility Orientation Manual Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Title__c</fullName>
        <description>Role that the provider plays at the facility. Keep this field in sync with the Facility Title on the Pay Rates. Used for integration</description>
        <label>Facility Title</label>
        <picklist>
            <picklistValues>
                <fullName>ACES EE Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES EE Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES Physician EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACES Physician PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Asst Hospital Med Program Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Hospital Medicine Program Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Lead Midlevel Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Locums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Medicine Program Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Mid Level Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician as Mid-level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_Reoccuring_Annual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Reoccuring Annual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Scheduled_Date__c</fullName>
        <label>First Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Shift_Bonus_Payout__c</fullName>
        <label>First Shift Bonus Payout</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Shift_Bonus_Repayment__c</fullName>
        <label>First Shift Bonus Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Shift_Bonus__c</fullName>
        <description>Payed to the provider after they have completed their first shift.  i.e. a bonus may be split into a sign on &amp; first shift.</description>
        <label>First Shift Bonus</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Week_Interest_In_Referring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Week Interest In Referring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Facility_ID__c</fullName>
        <label>Global Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_ID_Sent__c</fullName>
        <label>Global ID Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Provider_ID__c</fullName>
        <label>Global Provider ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosp_App_Complete_CT__c</fullName>
        <formula>App_to_Hosp_on__c -  Hosp_App_Received_on__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hosp App Complete CT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hosp_App_Received_on__c</fullName>
        <description>Entered by CPEC</description>
        <label>Hosp App Received on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosp_App_Sent_on__c</fullName>
        <description>Entered by CPEC</description>
        <label>Hosp App Sent on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosp_App_at_Customer__c</fullName>
        <formula>Hosp_App_Received_on__c -  Hosp_App_Sent_on__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hosp App at Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HospitalPrivinactiveDate__c</fullName>
        <description>Date Doc is inactive at hospital</description>
        <label>Hospital Privilege Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hospital_App_Approved_By__c</fullName>
        <label>Hospital App Approved By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>